--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,10 @@
-name: "Test"
+name: "nixinstall-kexec"
 on:
   pull_request:
   push:
 jobs:
-  tests:
+  build:
+    name: "build-nix-install-script"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -15,3 +16,26 @@ jobs:
         # Only needed for private caches
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - run: nix-build
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@latest
+      env:
+         # This token is provided by Actions, you do not need to create your own token
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: |
+              NIX install script Release
+        draft: false
+        prerelease: false
+    - name: Upload Release
+      id: upload-release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./result/tarball/nixos-system-x86_64-linux.tar.xz
+        asset_name: nixos-system-x86_64-linux.tar.xz
+        asset_content_type: application/octet-stream
