--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,10 @@ jobs:
     name: "build-nix-install-script"
     runs-on: ubuntu-latest
     steps:
-#    - run: echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v12
+      with:
+        nix_path: nixpkgs=channel:nixos-20.09
     - uses: cachix/cachix-action@v8
       with:
         name: nixinstall-kexec
